add 1. rule-based method; 2.bayesian model based method; 3.analyser for range query